testsuite/bsc.evaluator/dynamic/errors/Ifc_Reset_If.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling Ifc_Reset_If.bsv
code generation for sysIfc_Reset_If starts
Error: "Ifc_Reset_If.bsv", line 10, column 27: (G0068)
  The expression for a reset could not be evaluated. Resets must be determined
  at compile time and cannot be computed dynamically.
  During elaboration of the interface output reset `rst_out' at
  "Ifc_Reset_If.bsv", line 6, column 8.
  During elaboration of `sysIfc_Reset_If' at "Ifc_Reset_If.bsv", line 6,
  column 8.
